Navbar section done without respnsive

--- a/index.html
+++ b/index.html
@@ -9,6 +9,51 @@
 
 </head>
 
+<!-- ========== Header Section Start Now ========== -->
+<header>
+  <nav>
+    <h3>Ma<span>r</span>y</h3>
+    <ul>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Blog</a></li>
+      <button class="btn">Hire Me</button>
+    </ul>
+
+  </nav>
+
+</header>
+<!-- ========== Header Section Start Now ========== -->
+
+<!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section Start Now ========== -->
+
+<!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section Start Now ========== -->
+
+<!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section Start Now ========== -->
+
+<!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section Start Now ========== -->
+
+<!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section Start Now ========== -->
+
+<!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section Start Now ========== -->
+
+<!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section Start Now ========== -->
+
+<!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section Start Now ========== -->
+
+<!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section Start Now ========== -->
+
+<!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section Start Now ========== -->
+
 <body>
 
 </body>
