--- a/index.html
+++ b/index.html
@@ -11,15 +11,25 @@
 
 <!-- ========== Header Section Start Now ========== -->
 <header>
+
   <nav>
-    <h3>Ma<span>r</span>y</h3>
-    <ul>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Blog</a></li>
-      <button class="btn">Hire Me</button>
-    </ul>
+    <div class="container">
+      <div class="nav_wrapper">
+        <h3>Ma<span>r</span>y</h3>
+        <ul>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Blog</a></li>
+          <button class="btn">Hire Me</button>
+        </ul>
+
+      </div>
+    </div>
+
 
   </nav>
+
+
+
 
 </header>
 <!-- ========== Header Section Start Now ========== -->
