nav section and banner section are now complite without responsive

--- a/index.html
+++ b/index.html
@@ -5,40 +5,93 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>dev-portfolio</title>
+
+  <link rel="stylesheet" data-purpose="Layout StyleSheet" title="Web Awesome"
+    href="/css/app-wa-86cd56275caec687041f80b17dc62e32.css?vsn=d">
+
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-thin.css">
+
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-solid.css">
+
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-regular.css">
+
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-duotone-light.css">
+
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-thin.css">
+
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-solid.css">
+
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-regular.css">
+
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/sharp-light.css">
+
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/duotone-thin.css">
+
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/duotone-regular.css">
+
+  <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/duotone-light.css">
   <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
 <!-- ========== Header Section Start Now ========== -->
-<header>
-
+<header class="header">
+  <!-- ========== Nav Section Start Now ========== -->
   <nav>
-    <div class="container">
-      <div class="nav_wrapper">
-        <h3>Ma<span>r</span>y</h3>
-        <ul>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Blog</a></li>
-          <button class="btn">Hire Me</button>
-        </ul>
 
-      </div>
-    </div>
+
+    <h3>Ma<span>r</span>y</h3>
+    <ul>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Blog</a></li>
+      <button class="btn">Hire Me</button>
+    </ul>
 
 
   </nav>
+  <!-- ========== Nav Section End Now ========== -->
 
-
+  <!-- ========== Banner Section Start Now ========== -->
+  <div class="banner">
+    <div class="banner_wrapper">
+      <div class="banner_content">
+        <h3>Hi, I am</h3>
+        <h1>Mary Hardy</h1>
+        <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved
+          moments.</p>
+        <div class="button">
+          <a href="#"> <i class="fa-thin fa-down-to-bracket"></i> Download CV</a>
+          <a href="#"><i class="fa-duotone fa-thin fa-phone"></i> Contact</a>
+        </div>
+      </div>
+      <div class="banner_image">
+        <picture>
+          <img src="./assets/imges/hardy.png" alt="">
+        </picture>
+      </div>
+    </div>
+  </div>
+  <!-- ========== Banner Section End Now ========== -->
 
 
 </header>
 <!-- ========== Header Section Start Now ========== -->
 
-<!-- ========== Header Section Start Now ========== -->
-<!-- ========== Header Section Start Now ========== -->
+
+
 
 <!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section End Now ========== -->
 <!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section End Now ========== -->
+<!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section End Now ========== -->
+<!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section End Now ========== -->
+<!-- ========== Header Section Start Now ========== -->
+<!-- ========== Header Section End Now ========== -->
 
 <!-- ========== Header Section Start Now ========== -->
 <!-- ========== Header Section Start Now ========== -->
