about section are complite without responsive

--- a/index.html
+++ b/index.html
@@ -82,10 +82,51 @@
 
 
 
-<!-- ========== Header Section Start Now ========== -->
-<!-- ========== Header Section End Now ========== -->
-<!-- ========== Header Section Start Now ========== -->
-<!-- ========== Header Section End Now ========== -->
+<!-- ========== Main Section Start Now ========== -->
+
+<main>
+  <!-- ===== About Section Section Start Now ========== -->
+  <section class="about">
+    <div class="container">
+      <div class="about_wrapper">
+        <h4 class="section-title">About Me</h4>
+        <p class="section-description about_description">
+          I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites
+          that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working
+          with me. Delivering work within time and budget which meets clients requirements in our mata.
+        </p>
+        <div class="about_items">
+          <div class="about_item">
+            <span>Name:</span>
+            <p>Mary Hardy</p>
+          </div>
+          <div class="about_item">
+            <span>Email:</span>
+            <p>info@gmail.com</p>
+          </div>
+          <div class="about_item">
+            <span>Date of birth:</span>
+            <p>11 November 1987 </p>
+          </div>
+          <div class="about_item">
+            <span>From:</span>
+            <p>Los Angeles, USA</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  </section>
+  <!-- ===== About Section Section End Now ========== -->
+
+
+
+</main>
+<!-- ========== Main Section End Now ========== -->
+
+
+
 <!-- ========== Header Section Start Now ========== -->
 <!-- ========== Header Section End Now ========== -->
 <!-- ========== Header Section Start Now ========== -->
