Skill section are Complate without responsive

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>dev-portfolio</title>
-
+  <!-- Font Awesome Pro link -->
   <link rel="stylesheet" data-purpose="Layout StyleSheet" title="Web Awesome"
     href="/css/app-wa-86cd56275caec687041f80b17dc62e32.css?vsn=d">
 
@@ -115,11 +115,49 @@
         </div>
       </div>
     </div>
-
-
   </section>
   <!-- ===== About Section Section End Now ========== -->
+  <!-- ====== Skill Section Start Now ========== -->
+  <section class="skill_main">
+    <div class="container">
+      <div class="skill_wrapper">
+        <h4 class="section-title">What I do</h4>
+        <p class="section-description skill_desc">I have more than 10 years experience building software for clients all
+          over the
+          world. Below is a quick
+          overview of my main technical skill sets and technologies i use. Want to find out more about my experience?
+          Check out my online resume and project portfolio.</p>
+      </div>
+      <div class="skills_box_wrap">
+        <div class="skill_box">
+          <img src="./assets/imges/icons/js.png" alt="js">
+          <h4>Vanilla JavaScript</h4>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill_box">
+          <img src="./assets/imges/icons/react.png" alt="react">
+          <h4>React</h4>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill_box">
+          <img src="./assets/imges/icons/nodejs.png" alt="nodejs">
+          <h4>Node.js</h4>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available. Aenean commodo ligula eget dolor.</p>
+        </div>
+        <div class="skill_box">
+          <img src="./assets/imges/icons/mongo.png" alt="MongoDB">
+          <h4>MongoDB</h4>
+          <p>List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons
+            available. Aenean commodo ligula eget dolor.</p>
+        </div>
 
+      </div>
+    </div>
+  </section>
+  <!-- ====== Skill Section End Now ========== -->
 
 
 </main>
@@ -127,8 +165,7 @@
 
 
 
-<!-- ========== Header Section Start Now ========== -->
-<!-- ========== Header Section End Now ========== -->
+
 <!-- ========== Header Section Start Now ========== -->
 <!-- ========== Header Section End Now ========== -->
 <!-- ========== Header Section Start Now ========== -->
