--- a/index.html
+++ b/index.html
@@ -158,7 +158,67 @@
     </div>
   </section>
   <!-- ====== Skill Section End Now ========== -->
+  <!-- ====== Resume Section Start Now ========== -->
+  <section class="resume">
+    <div class="container">
+      <h3 class="section-title">A summary of My Resume</h3>
+      <div class="resume_wrapper">
+        <div class="resume_column_one">
+          <h3 class="resume_column_title">My Education</h3>
+          <div class="experience">
+            <h3 class="experience_title">Master in Computer Engineering</h3>
+            <h4 class="experience_subtitle">Harvard University / 2015 - 2017</h4>
+            <p class="experience_description">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <hr>
+          <div class="experience">
+            <h3 class="experience_title">Master in Computer Engineering</h3>
+            <h4 class="experience_subtitle">Harvard University / 2015 - 2017</h4>
+            <p class="experience_description">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <hr>
+          <div class="experience">
+            <h3 class="experience_title">Master in Computer Engineering</h3>
+            <h4 class="experience_subtitle">Harvard University / 2015 - 2017</h4>
+            <p class="experience_description">List skill/technologies here. You can change the icon above
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
 
+        </div>
+        <div class="resume_column_two">
+          <h3 class="resume_column_title">My Experience/h3>
+            <div class="experience">
+              <h3 class="experience_title">Sr. Font End Developer</h3>
+              <h4 class="experience_subtitle">Apple Inc / 2020 - Current</h4>
+              <p class="experience_description">List skill/technologies here. You can change the icon above
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="experience">
+              <h3 class="experience_title">Jr. Font End Developer</h3>
+              <h4 class="experience_subtitle">Dribbble Inc / 2018 - 2022</h4>
+              <p class="experience_description">List skill/technologies here. You can change the icon above
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <hr>
+            <div class="experience">
+              <h3 class="experience_title">HTML Developer</h3>
+              <h4 class="experience_subtitle">Adobe Inc / 2017 - 2018</h4>
+              <p class="experience_description">List skill/technologies here. You can change the icon above
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+
+        </div>
+      </div>
+      <div class="resume_button">
+        <a href="#"> <i class="fa-thin fa-down-to-bracket"></i> Download CV</a>
+      </div>
+    </div>
+
+  </section>
+  <!-- ====== Resume Section End Now ========== -->
 
 </main>
 <!-- ========== Main Section End Now ========== -->
@@ -166,8 +226,7 @@
 
 
 
-<!-- ========== Header Section Start Now ========== -->
-<!-- ========== Header Section End Now ========== -->
+
 <!-- ========== Header Section Start Now ========== -->
 <!-- ========== Header Section End Now ========== -->
 
