footer section complete without responsive

--- a/index.html
+++ b/index.html
@@ -223,12 +223,37 @@
 </main>
 <!-- ========== Main Section End Now ========== -->
 
+<!-- ========== Footer Section Start Now ========== -->
+<footer class="footer">
+  <div class="container">
+    <div class="footer_wrapper">
+      <div class="footer_column_one">
+        <h3>Lets Connect</h3>
+        <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday
+          through Friday.</p>
+        <div class="icons">
+          <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
 
+        </div>
+      </div>
+      <div class="footer_column_two">
+        <h3>Let’s Message me</h3>
+        <form>
+          <input type="text" placeholder="Your Name">
+          <input type="email" placeholder="Your Email">
+          <textarea name="" id="" cols="30" rows="10" placeholder="Message" value="submit"></textarea>
 
-
-
-<!-- ========== Header Section Start Now ========== -->
-<!-- ========== Header Section End Now ========== -->
+        </form>
+        <div class="footer_button">
+          <a href="#">Submit</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
+<!-- ========== Footer Section End Now ========== -->
 
 <!-- ========== Header Section Start Now ========== -->
 <!-- ========== Header Section Start Now ========== -->
